--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,20 +14,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-01 Fri 16:07]
+#+CAPTION: Clock summary at [2017-09-02 Sat 21:11]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *6:30* |      |      | 100.0 |
+| *Total time*                                                                | *7:33* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 6:30   |      |      | 100.0 |
-| Active                                                                      |        | 6:30 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:44 |  11.3 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |  11.5 |
-| COMPLETED Remove object types in yarn                                       |        |      | 0:52 |  13.3 |
-| COMPLETED Clean-up readme                                                   |        |      | 1:15 |  19.2 |
-| COMPLETED Rename transformers to adapters                                   |        |      | 0:28 |   7.2 |
-| STARTED Analysis on profiles and concepts                                   |        |      | 2:26 |  37.4 |
+| Stories                                                                     | 7:33   |      |      | 100.0 |
+| Active                                                                      |        | 7:33 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:44 |   9.7 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 1:14 |  16.3 |
+| COMPLETED Remove object types in yarn                                       |        |      | 0:52 |  11.5 |
+| COMPLETED Clean-up readme                                                   |        |      | 1:15 |  16.6 |
+| COMPLETED Rename transformers to adapters                                   |        |      | 0:28 |   6.2 |
+| COMPLETED Analysis on annotations and profiles                              |        |      | 2:26 |  32.2 |
+| STARTED Use namespaced stereotypes                                          |        |      | 0:34 |   7.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -406,6 +407,33 @@ Links:
 
 - [[https://msdn.microsoft.com/en-us/library/dd465146.aspx][Standard stereotypes for UML models]]
 
+*** STARTED Use namespaced stereotypes                                :story:
+    CLOCK: [2017-09-02 Sat 20:35]--[2017-09-02 Sat 21:09] =>  0:34
+
+Originally we added a space in the ORM stereotypes:
+
+: orm value
+
+This is not a particularly good idea. We should just add support for
+namespaced stereotypes:
+
+: orm::value
+
+We should also change all of the existing stereotypes to have a
+namespace:
+
+: modeling::object
+
+And so forth. The namespace name probably needs a bit of thinking.
+
+Actually, we should name all of the static stereotypes with a
+namespace, and making it clear they are connected to yarn. Example:
+
+: yarn::enumeration
+: yarn::orm::value
+
+and so forth.
+
 *** Code-generate annotations type templates                          :story:
 
 Tasks:
@@ -472,32 +500,6 @@ However, the downside is that we now have a verbose stereotype:
 
 Having said that, we cannot have values for all attributes in an
 object, just the attribute collection.
-
-*** Use namespaced stereotypes                                        :story:
-
-Originally we added a space in the ORM stereotypes:
-
-: orm value
-
-This is not a particularly good idea. We should just add support for
-namespaced stereotypes:
-
-: orm::value
-
-We should also change all of the existing stereotypes to have a
-namespace:
-
-: modeling::object
-
-And so forth. The namespace name probably needs a bit of thinking.
-
-Actually, we should name all of the static stereotypes with a
-namespace, and making it clear they are connected to yarn. Example:
-
-: yarn::enumeration
-: yarn::orm::value
-
-and so forth.
 
 *** Throw on unsupported stereotypes                                  :story:
 
