--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,22 +14,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-05 Tue 18:42]
+#+CAPTION: Clock summary at [2017-09-05 Tue 21:39]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *10:50* |       |      | 100.0 |
+| *Total time*                                                                | *11:49* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 10:50   |       |      | 100.0 |
-| Active                                                                      |         | 10:50 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   6.8 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |  11.4 |
-| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   8.0 |
-| COMPLETED Clean-up readme                                                   |         |       | 1:15 |  11.5 |
-| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   4.3 |
-| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  22.5 |
-| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  16.8 |
-| STARTED Rename yarn concepts                                                |         |       | 2:02 |  18.8 |
+| Stories                                                                     | 11:49   |       |      | 100.0 |
+| Active                                                                      |         | 11:49 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   6.2 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |  10.4 |
+| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   7.3 |
+| COMPLETED Clean-up readme                                                   |         |       | 1:15 |  10.6 |
+| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   3.9 |
+| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  20.6 |
+| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  15.4 |
+| STARTED Rename yarn concepts                                                |         |       | 3:01 |  25.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -438,6 +438,7 @@ namespace, and making it clear they are connected to yarn. Example:
 and so forth.
 
 *** STARTED Rename yarn concepts                                      :story:
+    CLOCK: [2017-09-05 Tue 20:51]--[2017-09-05 Tue 21:39] =>  0:48
     CLOCK: [2017-09-05 Tue 18:43]--[2017-09-05 Tue 18:54] =>  0:11
     CLOCK: [2017-09-05 Tue 18:06]--[2017-09-05 Tue 18:42] =>  0:36
     CLOCK: [2017-09-05 Tue 07:35]--[2017-09-05 Tue 08:20] =>  0:45
