--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,22 +14,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-05 Tue 22:54]
+#+CAPTION: Clock summary at [2017-09-05 Tue 23:32]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *13:03* |       |      | 100.0 |
+| *Total time*                                                                | *13:40* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 13:03   |       |      | 100.0 |
-| Active                                                                      |         | 13:03 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   5.6 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   9.5 |
-| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   6.6 |
-| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   9.6 |
-| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   3.6 |
-| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  18.6 |
-| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  13.9 |
-| STARTED Rename yarn concepts                                                |         |       | 4:15 |  32.6 |
+| Stories                                                                     | 13:40   |       |      | 100.0 |
+| Active                                                                      |         | 13:40 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:44 |   5.4 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   9.0 |
+| COMPLETED Remove object types in yarn                                       |         |       | 0:52 |   6.3 |
+| COMPLETED Clean-up readme                                                   |         |       | 1:15 |   9.1 |
+| COMPLETED Rename transformers to adapters                                   |         |       | 0:28 |   3.4 |
+| COMPLETED Analysis on annotations and profiles                              |         |       | 2:26 |  17.8 |
+| COMPLETED Use namespaced stereotypes                                        |         |       | 1:49 |  13.3 |
+| STARTED Rename yarn concepts                                                |         |       | 4:52 |  35.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -438,6 +438,7 @@ namespace, and making it clear they are connected to yarn. Example:
 and so forth.
 
 *** STARTED Rename yarn concepts                                      :story:
+    CLOCK: [2017-09-05 Tue 22:55]--[2017-09-05 Tue 23:32] =>  0:37
     CLOCK: [2017-09-05 Tue 21:51]--[2017-09-05 Tue 22:54] =>  1:03
     CLOCK: [2017-09-05 Tue 21:39]--[2017-09-05 Tue 21:50] =>  0:11
     CLOCK: [2017-09-05 Tue 20:51]--[2017-09-05 Tue 21:39] =>  0:48
@@ -529,6 +530,13 @@ others like say ORM at present. If a user requests ORM in a C# model,
 we should throw.
 
 If we are in compatibility mode, however, we should not throw.
+
+Note that we are already throwing if a stereotype is totally
+unknown. The problem here is that the stereotype is known, but not
+supported for all kernels. This is a bit trickier.
+
+We also need to check the existing code in stereotypes transform to
+stop trowing if compatibility flag is on.
 
 *** Add a modeline to stitch                                          :story:
 
